re PR c++/42218 (Broken diagnostic: 'tree_vec' not supported by pp_c_expression)

Fix PR c++/42218

gcc/cp/ChangeLog:
	PR c++/42218
	* cxx-pretty-print.c (pp_cxx_unqualified_id): Print only innermost
	template arguments.

gcc/testsuite/ChangeLog:
	PR c++/42218
	* g++.dg/other/error33.C: New test.

From-SVN: r154972